--- a/All_Project_code/views/css/home.css
+++ b/All_Project_code/views/css/home.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: b2g2a;
-    src: url(bengrraas-bold.woff);
+    src: url(../bengrraas-bold.woff);
     }
     
     * {
